--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>AI DJ WEB APP</title>
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -33,6 +34,7 @@
       <h3 class="btn btn-danger" id="volume">Volume</h3>
     </div>
 	<br><br>
+  <button id="play_button" class="btn btn-success" onclick="play_song()">Play</button>
 </center>
 
 <script src="main.js"></script>
